<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5FCFB"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="475dp"
        android:layout_height="70dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="576dp"
        android:background="@color/greenbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/grrenbox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Heading"
        android:textColor="#050000"
        android:textSize="@dimen/heading1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="385dp"
        android:layout_height="561dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="17dp"
        android:background="@color/mainbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitebox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="109dp"
        android:text="@string/paymentName"
        android:textColor="#050000"
        android:textSize="@dimen/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="59dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pay" />

    <EditText
        android:id="@+id/tvCArdExpYear"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterYear"
        android:textSize="@dimen/enteryear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvCVV"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterCVV"
        android:textSize="@dimen/entercvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvCardNo"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="429dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterCardNo"
        android:textSize="@dimen/enterCardnum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvCardName"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="357dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterCardName"
        android:textSize="@dimen/enterNameCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvName"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PaymentEnerName"
        android:textSize="@dimen/entername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="256dp"
        android:text="@string/Accepted"
        android:textColor="#050000"
        android:textSize="@dimen/cardAccepted"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="189dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterMail"
        android:textSize="@dimen/enterEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="488dp"
        android:text="@string/PaymentCVV"
        android:textColor="#050000"
        android:textSize="@dimen/cvv"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="488dp"
        android:text="@string/PaymentExpYear"
        android:textColor="#050000"
        android:textSize="@dimen/year"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="344dp"
        android:text="@string/PaymentNameonCard"
        android:textColor="#050000"
        android:textSize="@dimen/nameOnCard"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="418dp"
        android:text="@string/PaymentCardNumber"
        android:textColor="#050000"
        android:textSize="@dimen/cardNumber"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="178dp"
        android:text="@string/PaymentEmail"
        android:textColor="#050000"
        android:textSize="@dimen/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="149dp"
        android:textColor="#050000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <Button
        android:id="@+id/payBtn"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="580dp"
        android:backgroundTint="@color/process"
        android:text="@string/process"
        android:textColor="#040000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>